[PAGOPA-2382] feat: Add recovery tools (#38)
* [PAGOPA-2382] feat: Add cron job recovery

* [PAGOPA-2382] chore: Config cron expression

* [PAGOPA-2382] feat: new support API

* Bump to version 0.1.31-1-PAGOPA-2382

* Bump to version 0.1.31-2-PAGOPA-2382

* [PAGOPA-2382] fix: Update with upsert

* Bump to version 0.1.31-3-PAGOPA-2382

* [PAGOPA-2382] refactoring

* Bump to version 0.1.31-4-PAGOPA-2382

* [PAGOPA-2382] refactoring

* Bump to version 0.1.31-5-PAGOPA-2382

* [PAGOPA-2382] refactoring

* Bump to version 0.1.31-6-PAGOPA-2382

* [PAGOPA-2382] fix and config

* Bump to version 0.1.31-7-PAGOPA-2382

* [PAGOPA-2382] config: Update openapi.json

* Bump to version 0.1.31-8-PAGOPA-2382

* [PAGOPA-2382] config: Update API operation tag

* Bump to version 0.1.31-9-PAGOPA-2382

* [PAGOPA-2382] remove cron

---------
