# openapi/openapi.json
@@ -1,10 +1,10 @@
 {
   "openapi": "3.0.1",
   "info": {
+    "title": "pagopa-gpd-upload",
     "description": "Microservice to manage PagoPA GPD Upload",
     "termsOfService": "https://www.pagopa.gov.it/",
-    "title": "pagoPA GPD Upload",
-    "version": "0.1.31"
+    "version": "0.1.31-9-PAGOPA-2382"
   },
   "servers": [
     {
@@ -645,6 +645,110 @@
         "summary": "health check",
         "description": "Return OK if application is started",
         "operationId": "healthCheck",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AppInfo"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemJson"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [],
+                  "anyOf": [],
+                  "oneOf": []
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [],
+                  "anyOf": [],
+                  "oneOf": []
+                }
+              }
+            }
+          },
+          "429": {
+            "description": "Too many requests.",
+            "content": {
+              "text/json": {}
+            }
+          },
+          "500": {
+            "description": "Service unavailable",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemJson"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/support/brokers/{broker}/organizations/{organization}/{upload}/status/created/refresh": {
+      "get": {
+        "tags": [
+          "Support API"
+        ],
+        "summary": "Support API to recover status on CREATE operation",
+        "description": "Returns the debt positions upload report recovered.",
+        "operationId": "recoverStatus",
+        "parameters": [
+          {
+            "name": "broker",
+            "in": "path",
+            "description": "The broker code",
+            "required": true,
+            "schema": {
+              "minLength": 1,
+              "type": "string"
+            }
+          },
+          {
+            "name": "organization",
+            "in": "path",
+            "description": "The organization fiscal code",
+            "required": true,
+            "schema": {
+              "minLength": 1,
+              "type": "string"
+            }
+          },
+          {
+            "name": "upload",
+            "in": "path",
+            "description": "The unique identifier for file upload",
+            "required": true,
+            "schema": {
+              "minLength": 1,
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
